@@ -1047,6 +1047,9 @@
 	<Manufacturer id="0239" name="Stelpro">
 		<Product type="0001" id="0001" name="STZW402+ Electronic Thermostat" config="stelpro/stzw402.xml"/>
 	</Manufacturer>
+	<Manufacturer id="0271" name="Steinel">
+		<Product type="0002" id="1a72" name="IS140-2" config="steinel/is140-2.xml"/>
+	</Manufacturer>
 	<Manufacturer id="0166" name="Swiid">
 		<Product type="0100" id="0100" name="SwiidInter" config="swiid/swiidinter.xml"/>
 		<Product type="2007" id="0706" name="SwiidPlug" config="swiid/swiidplug.xml"/>
