@@ -1,0 +1,117 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns="http://code.google.com/p/open-zwave/">
+    <!-- https://products.z-wavealliance.org/products/2310/ -->
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+        <Value genre="config" instance="1" index="1" type="short" label="Duration of light after motion detection" units="seconds" size="2" min="5" max="900" value="180">
+            <Help>
+                Available settings: 5-900 seconds.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="2" type="short" label="Light threshold" units="lx" size="2" min="0" max="2000" value="2000">
+            <Help>
+                2000 - is used as daylight (always night mode).
+                0 - run Learn ambient light sequence. 2-1999 lux.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="5" type="byte" label="Sensitivity" units="%" size="1" min="2" max="100" value="100">
+            <Help>
+                Potentiometer State.
+                Available settings: 2-100%.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="8" type="list" label="Global Light" units="" size="1" min="0" max="1" value="1">
+            <Help>External ambient light value.</Help>
+            <Item label="Enable" value="0"/>
+            <Item label="Disable" value="1"/>
+        </Value>
+        <Value genre="config" instance="1" index="9" type="list" label="Slave Mode" units="" size="1" min="0" max="4" value="2">
+            <Help>Disable local control.</Help>
+            <Item label="Normal mode" value="0"/>
+            <Item label="Slave mode without gateway checking" value="1"/>
+            <Item label="Normal mode with lifeline error signalisation" value="2"/>
+            <Item label="Slave mode with gateway checking" value="3"/>
+            <Item label="Stupid mode - lamp permanently on" value="4"/>
+        </Value>
+        <Value genre="config" instance="1" index="10" type="short" label="Off behaviour" units="" size="2" min="0" max="209" value="10">
+            <Help>
+                Off behaviour (timeout).
+                0 - Lamp is switched off and remains so until any new motion event (local or remote) is received.
+                1 to 100 (Default) timeout: 1 second (1) to 100 seconds (100) in 1-second resolution.
+                101 to 200 timeout: 1 minute (101) to 100 minutes (200) 1-minute resolution.
+                201 to 209 timeout: 1 hour (201) to 9 hours (209) in 1-hour resolution.
+                255 Lamp is switched off for TIME (cfg 1).
+                It does not wait for a motion event and works normally via current motion evaluation.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="11" type="short" label="On behaviour" units="" size="2" min="0" max="209" value="255">
+            <Help>
+                On behaviour (timeout).
+                Similar than Off behaviour.
+                Available settings: 0-255.
+                0 - Lamp is switched on and remains so until any new motion event (local or remote) is received.
+                It then works normally via current motion evaluation.
+                Notice – during the day, this mode cannot be ended remotely due to motion events not being transmitted – only via local motion sensor if enabled.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="12" type="short" label="On behaviour time over" units="" size="2" min="0" max="209" value="204">
+            <Help>
+                On behaviour time over (timeout).
+                Available settings: 0-255.
+                0 No additional waiting for motion.
+                1 to 100 timeout: 1 second (1) to 100 seconds (100) in 1-second resolution.
+                101 to 200 timeout: 1 minute (101) to 100 minutes (200) 1-minute resolution.
+                201 to 209 (Default) timeout: 1 hour (201) to 9 hours (209) in 1-hour resolution.
+                255 Never stop waiting before motion.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="13" type="short" label="Sequence On-Off behaviour" units="" size="2" min="0" max="209" value="204">
+            <Help>
+                Available settings: 0-255.
+                0 - Lamp is switched off and remains so until any new motion event (local or remote) is received.
+                1 to 100 timeout: 1 second (1) to 100 seconds (100) in 1-second resolution.
+                101 to 200 timeout: 1 minute (101) to 100 minutes (200) 1-minute resolution.
+                201 to 209 (Default) timeout: 1 hour (201) to 9 hours (209) in 1-hour resolution.
+                255 device ignores ON - OFF sequence and uses OFF behavior.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="14" type="short" label="Sequence Off-On behaviour" units="" size="2" min="0" max="209" value="204">
+            <Help>Available settings: 0-255.
+                0 - Lamp is switched on and remains so until any new motion event (local or remote) is received.
+                It then works normally via current motion evaluation.
+                Notice – during the day, this mode cannot be ended remotely due to motion events not being transmitted – only via local motion sensor if enabled.
+                1 to 100 timeout: 1 second (1) to 100 seconds (100) in 1-second resolution.
+                101 to 200 timeout: 1 minute (101) to 100 minutes (200) 1-minute resolution.
+                201 to 209 (Default) timeout: 1 hour (201) to 9 hours (209) in 1-hour resolution.
+                255 device ignores OFF - ON sequence and uses ON behaviour.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="15" type="byte" label="Sequence timing" units="" size="1" min="10" max="50" value="10">
+            <Help>
+                Available settings: 10-50.
+            </Help>
+        </Value>
+        <Value genre="config" instance="1" index="16" type="short" label="Motion Off behaviour" units="" size="2" min="0" max="255" value="0">
+            <Help>
+                Available settings: 0-255.
+                0 (Default) BASIC SET to Motion sensor endpoint ignored, BASIC to root is mapped to relay endpoint, motion sensor still enabled.
+                1 to 100 timeout: 1 second (1) to 100 seconds (100) in 1-second resolution.
+                101 to 200 timeout: 1 minute (101) to 100 minutes (200) 1-minute resolution.
+                201 to 209 timeout: 1 hour (201) to 9 hours (209) in 1-hour resolution.
+                255 BASIC SET to Motion sensor endpoint ignored, BASIC to root is mapped to relay endpoint, motion sensor still disabled
+            </Help>
+        </Value>
+    </CommandClass>
+
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="4">
+            <Group index="1" label="Lifeline" max_associations="1" />
+            <Group index="2" label="Control Basic Set" max_associations="16" />
+            <Group index="3" label="Motion Notifications" max_associations="16"/>
+            <Group index="4" label="Sensor Luminescence" max_associations="16"/>
+        </Associations>
+    </CommandClass>
+
+</Product>
+
