@@ -202,6 +202,7 @@ Version 1.5
  - Add Dome Motion Detector (Nechry)
  - Add Dome Leak Sensor (Nechry)
  - Add Dome Mouser (Nechry)
+ - Add Steinel IS140 from Karhujarvi (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
